--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,6 +1,7 @@
 @import 'config';
 @import 'typography';
 @import 'material';
+@import 'dashboard-layout';
 
 * { margin: 0; padding: 0; box-sizing: border-box; outline: none; }
-html, body { height: 100%; min-width: 360px; }
+html, body { height: 100%; min-width: 768px; }
